--- a/index.css
+++ b/index.css
@@ -80,6 +80,12 @@
     text-decoration: none;
     color: inherit;
   }
+
+.user-cls{
+    margin: 5px;
+    padding: 10px;
+    border: 1px solid black;
+}
   
  
   
